--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
+<html> 
+  
   <head>
-    <title>My blog</title>
+    <link rel="stylesheet" type="css" href="style\main.css">
+
+
+    <title>Kiera's blog</title>
   </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1>
-    <p>This is the beginning of my website home page.</p>
+    <h1>Kia ora Taiao!</h1>
     <p>It will eventually contain a list of links to all my blogs.</p>
     <h2>My strengths and challenges</h2>
     <p> My results 
