--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
   
   <head>
-    <link rel="stylesheet" type="css" href="style\main.css">
+    <link rel="stylesheet" type="css" href="/home/kiera/devacademy/workspace/Lernaen.github.io/style/main.css">
 
 
     <title>Kiera's blog</title>
