--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html> 
   
   <head>
-    <link rel="stylesheet" type="text/css" href="/home/kiera/devacademy/workspace/Lernaen.github.io/style/main.css">
+    <title> Kiera's blog</title>
+    <link rel="stylesheet" type="text/css" href="https://github.com/Lernaen/Lernaen.github.io/blob/98763eee9ce2e8bd2d7f65136da0e818959182f0/style/main.css">
 
-
-    <title>Kiera's blog</title>
+    
   </head>
   <body>
     <h1>Kia ora Taiao!</h1>
