--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
   <head>
     <title> Kiera's blog</title>
-    <link rel="stylesheet" type="text/css" href="https://github.com/Lernaen/Lernaen.github.io/blob/98763eee9ce2e8bd2d7f65136da0e818959182f0/style/main.css">
+    <link rel="main" type="css" href="style/main.css">
 
     
   </head>
