--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
   <head>
     <title> Kiera's blog</title>
-    <link rel="main" type="css" href="style/main.css">
+    <link rel="stylesheet" type="text/css" href="style/main.css"/>
 
     
   </head>
