added divs for blog lists later

--- a/index.html
+++ b/index.html
@@ -60,5 +60,7 @@
       My nature precludes me from extolling the times I've made ehtical
       decisions, butI 'm sure in time I'll be able to explain something
     </p>
+    <div1></div1>
+    <div2></div2>
   </body>
 </html>
