--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Kiera's blog</title>
     <link rel="stylesheet" type="text/css" href="style/main.css" />
   </head>
