saving before revision

--- a/index.html
+++ b/index.html
@@ -61,7 +61,23 @@
       My nature precludes me from extolling the times I've made ehtical
       decisions, butI 'm sure in time I'll be able to explain something
     </p>
-    <div1></div1>
-    <div2></div2>
+    <div class="tech">
+      <h4>Links to Tech Skills entries</h4>
+      <ol>
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+      </ol>
+    </div>
+    <!-- add tech blog links here, want ordered list of links aligned left-->
+    <div class="hskills">
+      <h4>Links to Human Skills entries</h4>
+      <ol>
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+      </ol>
+    </div>
+    <!-- add human skills blog links here, want ordered list of links, aligned right-->
   </body>
 </html>
