--- a/index.html
+++ b/index.html
@@ -5,79 +5,39 @@
     <link rel="stylesheet" type="text/css" href="style/main.css" />
   </head>
   <body>
+    <img src="CylixFace.jpg" />
     <h1>Kia ora Taiao!</h1>
     <!-- <p>It will eventually contain a list of links to all my blogs.</p> -->
-    <h2>My strengths and challenges</h2>
-    <p>
-      My results from the 16 pt swiss test indicate the following tendencies: -
-      **Perceiving**: You tend to be flexible, spontaneous, and open to new
-      experiences rather than preferring structure and planning. -
-      **Introversion**: You lean towards being reserved, introspective, and
-      prefer solitary activities or small, close-knit groups over large social
-      gatherings. - **Feeling**: You are more likely to make decisions based on
-      personal values and emotions, considering how actions will affect others.
-      - **Intuition**: You slightly lean towards focusing on future
-      possibilities and abstract concepts rather than concrete facts and present
-      realities.
-    </p>
-    <p>
-      the High5 test indicated that I am a Philomath, Thinker, Brainstormer,
-      Problem-Solver, and Strategist, which I feel aligns fairly well with how I
-      approach challenges.
-    </p>
-    <p>
-      Another test indicated that my primary strength is Kindness, which I agree
-      with but feel thaat it's certainly not a value that is celebrated, but
-      rather exploited
-    </p>
-    <p>
-      An Ikigai test suggested the same thing, and suggested Robotics
-      engineering as a good career path, which I found interesting, as that was
-      the path I was interested in out of the engineering specialties I explored
-      at university.
-    </p>
-    <p>
-      I feel thatt my kindness and wish for less friction has often been taken
-      advantage of during my career thus far, particularly by those higher on
-      the ladder than me, and this has awoken a cynicism that leads to me
-      putting in minimal effort. while I belive this is a rational response, it
-      also does not help in situations managed by my own motivation.
-    </p>
+    <div><h2>My strengths and challenges</h2></div>
 
     <h3>
       My culture is primarily my found family, and My Mum and sister, we value
       kindness and fortitude, but won't take shit from others.
     </h3>
-    <p>
-      During my work at the dock, I saw many points of weakness in their
-      operating procedures when I first started, and due to my novice status,
-      was unable to effect any changes, and by the time I was taken seriously,
-      the burnout had rendered me unable to remember the changes. If I were to
-      do it over, I would note down the htings I saw until I had a more
-      experienced view, then re-edit and present them again. some things really
-      needed to be addressed.
-    </p>
-    <p>
-      My nature precludes me from extolling the times I've made ehtical
-      decisions, butI 'm sure in time I'll be able to explain something
-    </p>
-    <div class="tech">
-      <h4>Links to Tech Skills entries</h4>
-      <ol>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
-      </ol>
-    </div>
-    <!-- add tech blog links here, want ordered list of links aligned left-->
-    <div class="hskills">
-      <h4>Links to Human Skills entries</h4>
-      <ol>
-        <li>Coffee</li>
-        <li>Tea</li>
-        <li>Milk</li>
-      </ol>
-    </div>
-    <!-- add human skills blog links here, want ordered list of links, aligned right-->
+
+    <span>
+      <div class="tech">
+        <h4>Links to Tech Skills entries</h4>
+        <ol>
+          <li>Sprint 1</li>
+          <li>Sprint 2</li>
+          <li>Sprint 3</li>
+          <li>Sprint 4</li>
+          <li>Sprint 5</li>
+        </ol>
+      </div>
+      <!-- add tech blog links here, want ordered list of links aligned left-->
+      <div class="hskills">
+        <h4>Links to Human Skills entries</h4>
+        <ol>
+          <li>Sprint 1</li>
+          <li>Sprint 2</li>
+          <li>Sprint 3</li>
+          <li>Sprint 4</li>
+          <li>Sprint 5</li>
+        </ol>
+      </div>
+      <!-- add human skills blog links here, want ordered list of links, aligned right-->
+    </span>
   </body>
 </html>
