--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="stylesheet" type="text/css" href="style/main.css" />
   </head>
   <body>
-    <img src="CylixFace.jpg" />
-    <h1>Kia ora Taiao!</h1>
-    <!-- <p>It will eventually contain a list of links to all my blogs.</p> -->
+    <img id="banner" src="CylixFace.jpg" /><!--needs to be made responsive-->
+    <h1>Tēnā koutou katoa!</h1>
+
     <div><h2>My strengths and challenges</h2></div>
+    <!--add link to and create separate list page here-->
 
     <h3>
       My culture is primarily my found family, and My Mum and sister, we value
