Added required pages to my blog

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <img id="banner" src="CylixFace.jpg" /><!--needs to be made responsive-->
     <h1>Tēnā koutou katoa!</h1>
 
-    <div><h2>My strengths and challenges</h2></div>
-    <!--add link to and create separate list page here-->
+    <div>
+      <h2>My strengths and challenges</h2>
+      <br />
+      <p>
+        But first, a quick story
+        <a href="blog/te-houtaewa-template.html">Here </a>
+      </p>
+    </div>
 
     <h3>
       My culture is primarily my found family, and My Mum and sister, we value
@@ -20,8 +26,8 @@
       <div class="tech">
         <h4>Links to Tech Skills entries</h4>
         <ol>
-          <li>Sprint 1</li>
-          <li>Sprint 2</li>
+          <li class="unavailable">Sprint 1</li>
+          <li><a href="blog/html-css.html"> Sprint 2</a></li>
           <li>Sprint 3</li>
           <li>Sprint 4</li>
           <li>Sprint 5</li>
@@ -31,7 +37,7 @@
       <div class="hskills">
         <h4>Links to Human Skills entries</h4>
         <ol>
-          <li>Sprint 1</li>
+          <li class="unavailable">Sprint 1</li>
           <li>Sprint 2</li>
           <li>Sprint 3</li>
           <li>Sprint 4</li>
