--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -5,21 +6,22 @@
     <link rel="stylesheet" type="text/css" href="style/main.css" />
   </head>
   <body>
-    <img id="banner" src="CylixFace.jpg" /><!--needs to be made responsive-->
+    <img id="banner" src="CylixFace.jpg" />
     <h1>Tēnā koutou katoa!</h1>
 
     <div>
       <h2>My strengths and challenges</h2>
       <br />
       <p>
-        But first, a quick story
+        Before we get to the Meat and Potatoes, a quick story.
         <a href="blog/te-houtaewa-template.html">Here </a>
       </p>
     </div>
 
     <h3>
-      My culture is primarily my found family, and My Mum and sister, we value
-      kindness and fortitude, but won't take shit from others.
+      My culture is primarily my found family, My Mum and sister, We value
+      kindness and fortitude, but won't take being manipulated or bullied
+      kindly.
     </h3>
 
     <span>
@@ -27,24 +29,24 @@
         <h4>Links to Tech Skills entries</h4>
         <ol>
           <li class="unavailable">Sprint 1</li>
-          <li><a href="blog/html-css.html"> Sprint 2</a></li>
+          <li><a href="blog/html-css.html">Sprint 2</a></li>
           <li>Sprint 3</li>
           <li>Sprint 4</li>
           <li>Sprint 5</li>
         </ol>
       </div>
-      <!-- add tech blog links here, want ordered list of links aligned left-->
+      <!-- add tech blog links here, -->
       <div class="hskills">
         <h4>Links to Human Skills entries</h4>
         <ol>
           <li class="unavailable">Sprint 1</li>
-          <li>Sprint 2</li>
+          <li><a href="blog/learning-plan.html">Sprint 2</a></li>
           <li>Sprint 3</li>
           <li>Sprint 4</li>
           <li>Sprint 5</li>
         </ol>
       </div>
-      <!-- add human skills blog links here, want ordered list of links, aligned right-->
+      <!-- add human skills blog links here, -->
     </span>
   </body>
 </html>
