Added artist attribution note in the footer

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <h1>Tēnā koutou katoa!</h1>
 
     <div>
-      <h2>My strengths and challenges</h2>
+      <h2>
+        <a href="blog/identity-values.html">My strengths and challenges</a>
+      </h2>
       <br />
       <p>
-        Before we get to the Meat and Potatoes, a quick story.
-        <a href="blog/te-houtaewa-template.html">Here </a>
+        Before we get to the Meat and Potatoes, a quick story
+        <a href="blog/te-houtaewa-template.html">here. </a>
       </p>
     </div>
 
@@ -48,5 +50,9 @@
       </div>
       <!-- add human skills blog links here, -->
     </span>
+    <footer>
+      Art currently unattributed as the artist I commissioned left twitter and I
+      can't find them anymore.
+    </footer>
   </body>
 </html>
