--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ol>
           <li class="unavailable">Sprint 1</li>
           <li><a href="blog/html-css.html">Sprint 2</a></li>
-          <li>Sprint 3</li>
+          <li><a href="blog/javascript-dom.html">Sprint 3</a></li>
           <li>Sprint 4</li>
           <li>Sprint 5</li>
         </ol>
@@ -43,7 +43,7 @@
         <ol>
           <li class="unavailable">Sprint 1</li>
           <li><a href="blog/learning-plan.html">Sprint 2</a></li>
-          <li>Sprint 3</li>
+          <li><a href="blog/emotional-intelligence.html">Sprint 3</a></li>
           <li>Sprint 4</li>
           <li>Sprint 5</li>
         </ol>
