links and PS page added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       kindness and fortitude, but won't take being manipulated or bullied
       kindly.
     </h3>
+    <div>
+      <p>
+        My link to my Whare is
+        <a href="blog/te-whare-tapa-wha.html"> here</a>
+      </p>
+    </div>
 
     <span>
       <div class="tech">
@@ -33,7 +39,7 @@
           <li class="unavailable">Sprint 1</li>
           <li><a href="blog/html-css.html">Sprint 2</a></li>
           <li><a href="blog/javascript-dom.html">Sprint 3</a></li>
-          <li>Sprint 4</li>
+          <li><a href="blog/problem-solving.html">Sprint 4</a></li>
           <li>Sprint 5</li>
         </ol>
       </div>
@@ -44,7 +50,7 @@
           <li class="unavailable">Sprint 1</li>
           <li><a href="blog/learning-plan.html">Sprint 2</a></li>
           <li><a href="blog/emotional-intelligence.html">Sprint 3</a></li>
-          <li>Sprint 4</li>
+          <li><a href="blog/neuroplasticity.html">Sprint 4</a></li>
           <li>Sprint 5</li>
         </ol>
       </div>
