--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li><a href="blog/learning-plan.html">Sprint 2</a></li>
           <li><a href="blog/emotional-intelligence.html">Sprint 3</a></li>
           <li><a href="blog/neuroplasticity.html">Sprint 4</a></li>
-          <li>Sprint 5</li>
+          <li><a href="blog/foundations-reflection.html"></a>Sprint 5</li>
         </ol>
       </div>
       <!-- add human skills blog links here, -->
